dataset/local/tf_s3_abort_incomplete_uploads/resource.yaml
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: good-plan
terraform_version: "1.6.6"
planned_values:
  root_module:
    resources:
      - type: aws_s3_bucket
        values:
          bucket: my-good-bucket
      - type: aws_s3_bucket_lifecycle_configuration
        values:
          bucket: my-good-bucket
          rule:
            - status: Enabled
              abort_incomplete_multipart_upload:
                - days_after_initiation: 7
---
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: bad-plan
terraform_version: "1.6.6"
planned_values:
  root_module:
    resources:
      - type: aws_s3_bucket
        values:
          bucket: my-bad-bucket
      - type: aws_s3_bucket_lifecycle_configuration
        values:
          bucket: my-bad-bucket
          rule:
            - status: Disabled
              abort_incomplete_multipart_upload: []
