dataset/local/tf_s3_abort_incomplete_uploads/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: abort-incomplete-uploads
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: abort-incomplete-uploads
    kind: Plan
    resources:
      - good-plan
    result: pass
  - policy: abort-incomplete-uploads
    kind: Plan
    resources:
      - bad-plan
    result: fail
